syntax = "proto3";

service FileUploader{
  rpc upload(stream Chunk) returns (Reply){}
}

message Chunk{
  bytes buffer = 1;
}

message Reply{
  int32 length = 1;
}